// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render PhotographyGridSection component w/ images. 1`] = `
Array [
  .c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: textMediumMuted;
  font-family: smallcaps;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 48px;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  margin-bottom: 8px;
  padding-left: 8px;
  padding-right: 8px;
  width: 100%;
}

<h2
    className="c0 flex fw5"
    fontSize="6"
    width="100%"
  >
    <a
      href="/true/#"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      01 May 2019
    </a>
  </h2>,
  .c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<div
    className="c0 mb4 w-100"
    style={
      Object {
        "height": NaN,
      }
    }
  >
    <div
      style={
        Object {
          "height": NaN,
          "position": "absolute",
          "transform": "translate3d(0px,NaNpx,0)",
          "width": 0,
        }
      }
    />
    <div
      style={
        Object {
          "height": NaN,
          "position": "absolute",
          "transform": "translate3d(0px,NaNpx,0)",
          "width": 0,
        }
      }
    />
  </div>,
  .c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-bottom: 8px;
  margin-top: 32px;
}

<div
    className="c0"
    style={
      Object {
        "borderTop": "1px solid rgb(221, 221, 221)",
      }
    }
  >
     
  </div>,
]
`;

exports[`Render PhotographyGridSection component. 1`] = `
Array [
  .c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: textMediumMuted;
  font-family: smallcaps;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 48px;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  margin-bottom: 8px;
  padding-left: 8px;
  padding-right: 8px;
  width: 100%;
}

<h2
    className="c0 flex fw5"
    fontSize="6"
    width="100%"
  >
    <a
      href="/true/#"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      01 May 2019
    </a>
  </h2>,
  .c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<div
    className="c0 mb4 w-100"
    style={
      Object {
        "height": 0,
      }
    }
  />,
  .c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-bottom: 8px;
  margin-top: 32px;
}

<div
    className="c0"
    style={
      Object {
        "borderTop": "1px solid rgb(221, 221, 221)",
      }
    }
  >
     
  </div>,
]
`;
